// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change option 1`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 2`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">和平区</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">河东区</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 3`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">和平区</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">河东区</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-num prop 1`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-top、columns-bottom slot 1`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->Top<div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>Bottom
  <!---->
</div>
`;

exports[`reset method 1`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">蓟县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`reset method 2`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`title slot 1`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button>Custom Title<button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 1`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 2`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 3`] = `
<div class="van-picker van-area">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;
